--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_admin">Admin</string>
     <string name="title_activity_receipt">receipt</string>
+    <string name="title_activity_cashier_">Cashier_Activity</string>
+    <string name="title_activity_receipt_">Receipt_Activity</string>
 
 
 </resources>
